feature: type user role with struct in db
